# meminit

./: .ai_agents_gitignore_override_master  .editorconfig  .geminiignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  NOTICE  README.md  SECURITY.md  TECH_DEBT.md  check_all_envelopes.py  docops.config.yaml  engineering-principles.md  package.json  pyproject.toml  repro_adr_error.json  repro_bug.py  requirements.txt  run_test.py  telemetry-id
.codex/skills/: meminit-docops
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.kilo/plans/: 1777484460162-crisp-harbor.md
docs/00-governance/: catalog.schema.json  gov-001-document-standards.md  gov-002-versioning-practices.md  gov-003-security-practices.md  gov-004-writing-style-guide.md
docs/01-indices/: catalogue.md  kanban.css  kanban.md  meminit.index.json  project-state.yaml
docs/02-strategy/: strat-001-project-meminit-vision.md
docs/05-planning/: impl-note-001-graph-index-capabilities.md  plan-001-mvp-tasklist.md  plan-002-compliance-testing.md  plan-003-roadmap.md  plan-004-files-checked-output-contract.md  plan-005-backlog-issues.md  plan-006-atomic-task-list.md  plan-006a-org-config-scope.md  plan-008-agentic-coding-vnext-programme.md  plan-009-phase-0-detailed-implementation-plan.md  plan-010-phase-1-detailed-implementation-plan.md  plan-011-phase-2-detailed-implementation-plan.md  plan-012-phase-3-detailed-implementation-plan.md  plan-013-phase-4-detailed-implementation-plan.md  plan-014-phase-5-detailed-implementation-plan.md  plan-015-next-improvements-sprint-plan.md
docs/10-prd/: prd-001-meminit-tooling-ecosystem.md  prd-002-new-file-function.md  prd-003-agent-interface-v1.md  prd-004-brownfield-adoption-hardening.md  prd-005-agent-interface-v2.md  (+3 more)
scripts/: codex_review_remediation_loop.py  debug_fixer.py  e2e_integration_test.py
tests/: conftest.py  helpers.py  test_codex_skill_meminit_docops.py
(+225 files in other folders)
